--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 
+          
+      - name: Docker Login 
+        env: 
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo "Iniciando Login"
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          echo "Fin del Login"
+          
+      - name: Build Docker Image
+        run: |
+          docker build -t eldirigente/graph-action:1.0.3 .
+          
+      - name: Push Docker Image
+        run: |
+          docker push eldirigente/graph-action:1.0.3
+          
+#     - name: Build the Docker image
+#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
