--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,10 +30,12 @@ jobs:
       - name: Build Docker Image
         run: |
           docker build -t eldirigente/graph-action:1.0.3 .
+          docker build -t eldirigente/graph-action:latest .
           
       - name: Push Docker Image
         run: |
           docker push eldirigente/graph-action:1.0.3
+          docker push eldirigente/graph-action:latest
           
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
