--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,24 +18,41 @@ jobs:
         with:
           fetch-depth: 0 
           
+      - name: Git Semantic Version
+        uses: PaulHatch/semantic-version@v5.0.3
+        with: 
+            major_pattern: "major:"
+            minor_pattern: "feat:"
+            version_format: "${major}.${minor}.${patch}-prerelease${increment}"
+        id: version
+
+
       - name: Docker Login 
         env: 
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+          echo "New Version: $NEW_VERSION!!!!!!!" 
         run: |
           echo "Iniciando Login"
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          
           echo "Fin del Login"
           
-      - name: Build Docker Image
-        run: |
-          docker build -t eldirigente/graph-action:1.0.3 .
-          docker build -t eldirigente/graph-action:latest .
           
-      - name: Push Docker Image
-        run: |
-          docker push eldirigente/graph-action:1.0.3
-          docker push eldirigente/graph-action:latest
+      
+        
+        
+
+#       - name: Build Docker Image
+#         run: |
+#           docker build -t eldirigente/graph-action:1.0.3 .
+#           docker build -t eldirigente/graph-action:latest .
+          
+#       - name: Push Docker Image
+#         run: |
+#           docker push eldirigente/graph-action:1.0.3
+#           docker push eldirigente/graph-action:latest
           
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
