--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,28 +31,26 @@ jobs:
         env: 
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          NEW_VERSION: ${{ steps.version.outputs.version }}
-          echo "New Version: $NEW_VERSION " 
+          
         run: |
           echo "Iniciando Login"
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
           
           echo "Fin del Login"
           
+      - name: Build Docker Image
+        env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          docker build -t eldirigente/graph-action:$NEW_VERSION .
+          docker build -t eldirigente/graph-action:latest .
           
-      
-        
-        
-
-#       - name: Build Docker Image
-#         run: |
-#           docker build -t eldirigente/graph-action:1.0.3 .
-#           docker build -t eldirigente/graph-action:latest .
+      - name: Push Docker Image
+        env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+        run: |
+          docker push eldirigente/graph-action:$NEW_VERSION
+          docker push eldirigente/graph-action:latest
           
-#       - name: Push Docker Image
-#         run: |
-#           docker push eldirigente/graph-action:1.0.3
-#           docker push eldirigente/graph-action:latest
-          
-#     - name: Build the Docker image
-#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+#       - name: Build the Docker image
+#         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
